test/correct/ImportTwo2.hs
module ImportTwo2 where

y = 3