test/typeerrors/Examples/GuardedGuard.hs
module GuardedGuard where

f | 3 = 5
